Bug 1730361 - [1/1] remove unnecessary flag from IFileDialog  r=win-reviewers,handyman

Remove the `FOS_SHAREAWARE` flag, which tells Windows that we'll be
providing it with an `IFileDialogEvents` object with `.OnShareViolation()`
implemented. (We do no such thing, nor ever have.)

Differential Revision: https://phabricator.services.mozilla.com/D221273